# COMP1000-Assignment

./: .gitignore  Assignment.md  CMakeLists.txt  README.md
src/: Assignment.md  game.c  game.h  input.c  input.h  linkedList.c  linkedList.h  main.c  makefile  map.c  map.h  map.txt  random.c  random.h  treasure
